# agentic-data-modeler

./: .env.sample  .gitignore  README.md  pyproject.toml  settings.py  task.txt  task2.txt
bedrock-kb-test/: main.py
output/: result-20241130-2040.md  result-20241201-0826.md
passive_goal_creator/: main.py
prompt_optimizer/: main.py
response_optimizer/: main.py
single_path_plan_generation/: main.py
