[project]
name = "my-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "decorator==4.4.2",
    "faiss-cpu==1.8.0.post1",
    "langchain-aws==0.2.0",
    "langchain-community==0.3.0",
    "langchain-core==0.3.0",
    "langchain-openai==0.2.0",
    "langgraph==0.2.22",
    "numpy==1.26.4",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "retry==0.9.2",
]
